# GLLite

./: CMakeLists.txt  LICENSE  README.md
GLLite/: CMakeLists.txt
GLLite/glsl/: basic.glvs  basic_texture.glfs  basic_texture.glvs
GLLite/include/: camera.h  indexarray.h  shader.h  texture.h  utils.h  vertexarray.h  vertexbuffer.h  vertexbufferlayout.h  window.h
GLLite/src/: camera.cpp  indexarray.cpp  shader.cpp  texture.cpp  vertexarray.cpp  vertexbuffer.cpp  vertexbufferlayout.cpp  window.cpp
apps/: CMakeLists.txt
apps/image_renderer/: CMakeLists.txt  image.glfs  image.glvs  image_renderer.cpp  image_renderer.h  main.cpp
examples/: CMakeLIsts.txt
examples/hello_indexed_quad/: CMakeLists.txt  main.cpp
examples/hello_texture/: CMakeLists.txt  main.cpp
examples/hello_triangle/: CMakeLists.txt  main.cpp
examples/image_renderer_demo/: CMakeLists.txt
src/: main.cpp  shader.cpp  shader.h  vertexarray.cpp  vertexarray.h  vertexbuffer.cpp  vertexbuffer.h  vertexbufferlayout.cpp  vertexbufferlayout.h  window.cpp  window.h
src/glsl/: basic.glfs
